# subno.ts

./: .env.example  .env.server  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.js  API_TESTING_GUIDE.md  ARCHITECTURE.md  AUDIT_REPORT.md  DEPLOYMENT.md  Dockerfile  ENUM_USAGE_EXAMPLES.ts  IFLOW.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  README_en.md  README_zh.md  SECURITY_REFACTORING_EXAMPLES.ts  deploy.sh  docker-compose.yml  drizzle.config.ts  eslint.config.js  eslint.config.mjs  next.config.ts  package-lock.json  package.json  security-emergency-fix.sh  security-test-simple.sh  security-test.sh  test_api.sh  tsconfig.json  vercel.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml  security-audit.yml
.husky/: check-license.js  commit-msg  pre-commit
.sisyphus/: ralph-loop.local.md
__tests__/: api-functional.test.ts  api-key-middleware.test.ts  channel-repository.test.ts  channel-service.test.ts  channels-route.test.ts  cors.test.ts  cron-routes.test.ts  crypto-utils.test.ts  env-config.test.ts  key-revocation.test.ts  permissions.test.ts  publish-route.test.ts  register-route.test.ts  register-service.test.ts  security-fixes-verification.test.ts  security-fixes.test.ts  security.test.ts  setup.ts
__tests__/e2e/: user-flows.test.ts
__tests__/integration/: api-endpoints.test.ts  api.test.ts
__tests__/performance/: api.load.ts
__tests__/unit/: api-key.service.test.ts  boundary-conditions.test.ts  encryption.service.test.ts  message.service.test.ts  rate-limiter.service.test.ts  security.test.ts  validation.util.test.ts
__tests__/utils/: test-server.ts
app/: globals.css  layout.tsx  middleware.ts  page.tsx  template.tsx
app/api-docs/: page.tsx
app/api/channels/: route.ts
app/api/keys/: route.ts
app/api/publish/: route.ts
app/api/register/: route.ts
app/api/subscribe/: route.ts
app/components/: GlobalHeader.tsx  LanguageSwitcher.tsx  StarField.tsx
app/context/: I18nContext.tsx
app/hooks/: useTranslation.ts
app/locales/: en.json  zh-CN.json
docker/: .dockerignore  .env.production  DEPLOYMENT.md  Dockerfile
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  FAQ.md  MIGRATION_KEY_REVOCATION.md  README.md  USER_GUIDE.md  configuration.md
drizzle/: 0000_wide_fixer.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
openspec/: project.md
openspec/changes/: security-enhancements.md
openspec/changes/fix-critical-security-performance/: design.md  proposal.md  tasks.md
openspec/changes/fix-key-management-security/: design.md  proposal.md  tasks.md
openspec/changes/fix-security-vulnerabilities/: design.md  proposal.md  tasks.md
openspec/changes/improve-test-coverage-docker/: design.md  proposal.md  tasks.md
public/locales/: en.json  zh-CN.json
scripts/: add-license-header.js  check-module-exports.js  dependency-check.js  deploy-vercel.sh  deploy_huaweicloud.sh  docker-compose.yml  migrate-enums.sh  migrate-revocation.js  pre-check.js  run-migrations.ts  test_api.sh  update-license-year.js  verify-precommit.js
sdk/: README.md
sdk/c/: CMakeLists.txt  Makefile  README.md  test_client  test_subscribe
sdk/c/example/: Makefile  basic_usage.c  subscribe_example.c
sdk/c/include/: securenotify.h  securenotify_error.h  securenotify_types.h
sdk/c/src/: securenotify.c  securenotify_error.c
sdk/c/tests/: test_client.c  test_subscribe.c
sdk/java/: README.md  pom.xml
sdk/python/: README.md  benchmark_performance.py  pyproject.toml  pytest.ini
sdk/python/src/securenotify/: __init__.py  client.py
sdk/python/src/securenotify/managers/: apikey_manager.py  base.py  channel_manager.py  key_manager.py  publish_manager.py  subscribe_manager.py
sdk/python/src/securenotify/types/: api.py  errors.py
sdk/python/src/securenotify/utils/: cache.py  connection.py  helpers.py  http.py  metrics.py  rate_limiter.py  request_deduplicator.py  retry.py
sdk/python/src/securenotify_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/python/tests/: README.md  test_client.py  test_connection.py  test_http.py  test_managers.py  test_optimizations.py  test_retry.py  test_types.py
sdk/rust/: Cargo.toml  README.md  build.rs
sdk/rust/.cargo/: config.toml
sdk/rust/src/: client.rs  lib.rs  tests.rs  uniffi.toml  uniffi.udl  uniffi_exports.rs
sdk/rust/src/managers/: apikey_manager.rs  channel_manager.rs  key_manager.rs  mod.rs  publish_manager.rs  subscribe_manager.rs
sdk/rust/src/types/: api.rs  error.rs  mod.rs
sdk/rust/src/utils/: cache.rs  connection.rs  http.rs  metrics.rs  mod.rs  request_deduplicator.rs  retry.rs
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
sdk/typescript/src/: client.test.ts  client.ts  index.ts  integration.test.ts
src/: middleware.ts
src/app/: global-error.tsx  globals.css  layout.tsx  page.module.css  page.tsx
src/config/: env.ts
src/db/: index.ts  schema.ts
src/db/migrations/: 0000_ambiguous_baron_strucker.sql  0000_early_karnak.sql  0000_glorious_vampiro.sql  0001_add_channel_expiry.sql
src/lib/: db.ts  redis.ts  shutdown.ts
src/lib/config/: cors.config.ts  database.config.ts  env.ts  index.ts  rate-limit.config.ts  security.config.ts
src/lib/enums/: algorithm.enums.ts  channel.enums.ts  config.enums.ts  environment.enums.ts  index.ts  permission.enums.ts  ratelimit.enums.ts
src/lib/middleware/: api-key.ts  index.ts  rate-limit.ts
src/lib/repositories/: api-key.repository.ts  channel.repository.ts  index.ts  public-key.repository.ts  query-builder.ts  redis.repository.ts  revocation-confirmation.repository.ts
src/lib/services/: api-key.service.ts  audit.service.ts  channel.service.ts  cleanup.service.ts  encryption-key.service.ts  encryption.service.ts  index-monitor.service.ts  index.ts  key-revocation.service.ts  message.service.ts  publish.service.ts  rate-limiter.service.ts  register.service.ts  subscribe.service.ts
src/lib/types/: config.types.ts  errors.ts  message.types.ts  permissions.ts  repository.types.ts  result.ts  revocation.types.ts
src/lib/utils/: cache.ts  crypto.ts  (+15 more)
(+85 files in other folders)
