[package]
name = "securenotify-sdk"
version = "0.1.0"
edition = "2021"
description = "SecureNotify Rust SDK with C FFI support via UniFFI"
documentation = "https://github.com/securenotify/sdk-rust"
repository = "https://github.com/securenotify/sdk-rust"
license = "Apache-2.0"
keywords = ["securenotify", "notification", "push", "ffi", "uniffi"]
categories = ["network-programming", "api-bindings"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
# HTTP client with streaming and SOCKS support
reqwest = { version = "0.11", features = ["json", "stream", "socks"], default-features = false }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# FFI
uniffi = { version = "0.25", features = ["cli"] }

# URL parsing
url = "2.5"

# HTTP types
http = "1.0"

# Time utilities
time = { version = "0.3", features = ["serde", "macros"] }

# Random for jitter
rand = "0.8"

[build-dependencies]
uniffi-build = "0.25"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
socks = ["reqwest/socks"]

[profile.release]
lto = true
opt-level = 3
strip = true

[profile.dev]
debug = true
